--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
+    "server": "json-server ./src/services/server.json --host 192.168.0.102 --port 3333 --delay 800",
     "test": "jest"
   },
   "dependencies": {
@@ -13,6 +14,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "expo": "~41.0.1",
     "expo-font": "~9.1.0",
     "expo-splash-screen": "~0.10.2",
