--- a/app.json
+++ b/app.json
@@ -11,6 +11,9 @@
     "splash": {
       "image": "./assets/splash.png",
       "backgroundColor": "#1b1b1f"
-    }
+    },
+    "packagerOpts": {
+			"config": "metro.config.js"
+		}
   }
 }
