--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@expo-google-fonts/archivo": "^0.1.0",
     "@expo-google-fonts/inter": "^0.1.0",
+    "@nozbe/watermelondb": "^0.22.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
